--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "backend/server.js", "use": "@vercel/node" }
+      { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "backend/server.js" }
+      { "src": "/(.*)", "dest": "/" }
     ]
   }
   
